--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
       <!-- copyright section start -->
       <div class="copyright_section">
          <div class="container">
-            <p class="copyright_text">2025 Tous droits révervé. Design by David Ngouadi & Nguia </p>
+            <p class="copyright_text">ManyBijoux 2025 Tous droits révervé. Design by David Ngouadi Dev </p>
          </div>
       </div>
       <!-- copyright section end -->
